--- a/restaurant-org/libs/customer/feature-list/src/lib/customer-feature-list/customer-feature-list.component.html
+++ b/restaurant-org/libs/customer/feature-list/src/lib/customer-feature-list/customer-feature-list.component.html
@@ -34,7 +34,13 @@
           data-testid="customer-feature-list-firstName-col">
           First name
         </th>
-        <td mat-cell *matCellDef="let element">{{ element.firstName }}</td>
+        <td mat-cell *matCellDef="let element">
+          <a
+            class="text-blue-500 hover:underline"
+            [routerLink]="['/customer/details/', element.id]"
+            >{{ element.firstName }}</a
+          >
+        </td>
       </ng-container>
 
       <ng-container matColumnDef="lastName">
