--- a/restaurant-org/libs/restaurant/feature-list/src/lib/restaurant-feature-list/restaurant-feature-list.component.html
+++ b/restaurant-org/libs/restaurant/feature-list/src/lib/restaurant-feature-list/restaurant-feature-list.component.html
@@ -24,7 +24,13 @@
           data-testid="restaurant-feature-list-id-col">
           No.
         </th>
-        <td mat-cell *matCellDef="let element">{{ element.id }}</td>
+        <td mat-cell *matCellDef="let element">
+          <a
+            class="text-blue-500 hover:underline"
+            [routerLink]="['/restaurant/details/', element.id]"
+            >{{ element.id }}</a
+          >
+        </td>
       </ng-container>
 
       <ng-container matColumnDef="name">
